[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/BossZombie.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2(24, 24)

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2(28, 28)

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color(0.854902, 0.0941176, 0.0941176, 1)

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 24.0
flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color = Color(0.854902, 0.0941176, 0.0941176, 1)

[sub_resource type="Animation" id=7]
resource_name = "rage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:color")
tracks/0/interp = 1
tracks/0/loop = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(0, 0.5),
"transitions": PoolRealArray(1, 1),
"update": 0,
"values": [Color(0.0941176, 0.588235, 0.0941176, 1), Color(0.854902, 0.0941176, 0.0941176, 1)]
}

[node name="BossZombie" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
color = Color(0.0941176, 0.588235, 0.0941176, 1)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="SummonTimer" type="Timer" parent="."]
one_shot = true

[node name="SpecialAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rage = SubResource( 7 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -30.0
margin_top = -40.0
margin_right = 30.0
margin_bottom = -34.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false

[node name="RageParticles" type="Particles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.5
process_material = SubResource( 6 )

[node name="Crown" type="ColorRect" parent="."]
margin_left = -12.0
margin_top = -32.0
margin_right = 12.0
margin_bottom = -24.0
color = Color(0.905882, 0.745098, 0.0941176, 1)